Added to the about section, changed images

--- a/home.html
+++ b/home.html
@@ -19,35 +19,76 @@
 <label for="checkbox" class = "label">
 <div class = "ball"></div>
 </label>
-</div>
 
   <div class="navbar">
+    <b><big>
+      <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
+    </b></big>
   </div>
 
+<a id = "home">
 <div class = 'header'>
   <h1>안녕하세요</h1>
-  <p>(Hello)</p>
+  <h2>(Hello)</h2>
 </div>
 
 <a id = "about">
 <div class = 'sectionheader'>
   <h1> 바이오 </h1>
-  <p> (About) </p>
+  <h2> (About) </h2>
 </div>
 
 <div class = 'aboutsection'>
-  <p> Hello!! I received a B.S. in Mathematics from Georgia State University along with a M.S. in Computational Science and Engineering from Georgia Tech. I currently work at Demand Driven Technologies as a business data analyst, assisting in the creation of an AI/machine learning model to help our customers' supply chain by minimizing inventory while maximizing their on time delivery. </p>
-  <img src="theme1.jpg" id='bioimg'>
+  <p>
+    <img src="Untitled-2.png" id='bioimg'>
+    <big><strong>Hello!! My name is Isabella Nang, and it's nice to meet you!</big></strong>
+
+    <br>
+    <br>
+
+    I received a B.S. in Mathematics from Georgia State University along with a M.S. in Computational Science and Engineering from Georgia Tech. I currently work at Demand Driven Technologies as a business data analyst, assisting in the creation of an AI/machine learning model to help our customers' supply chain by minimizing inventory while maximizing their on time delivery.
+
+    <br>
+    <br>
+
+    For my full education and work history, please refer to my <a href="Resume.pdf">resume</a>.
+
+    <br>
+    <br>
+
+    <!---
+    In October 2021, I was diagnosed with a rare bone cancer called <a href="https://my.clevelandclinic.org/health/diseases/15041-osteosarcoma">osteosarcoma</a>.
+    <br>
+    After 5 surgeries and 30 weeks of chemotherapy over the course of a year, I was declared NED (No Evidence of Disease) and have been since September 2022. I hope to one day use my data analysis skills to help predict recurrence in other osteosarcoma patients.
+    --->
+
+  </p>
+
+
 </div>
 
 
 <a id = "projects">
 <div class = 'sectionheader'>
+  <h1> 프로젝트 </h1>
+  <h2> (Projects) </h2>
 </div>
 
+<div class = 'projectsection'>
+  <p>
+    <big><strong>For all project code, please refer to my <a href="http://www.github.com/inang1">github</a>.</big></strong>
+  </p>
+</div>
+
+
+<a id = "contact">
+<div class = 'sectionheader'>
+  <h1> 연락처 </h1>
+  <h2> (Contact) </h2>
+</div>
 
 
 
