+ contact button, fixed a bug

--- a/home.html
+++ b/home.html
@@ -15,10 +15,6 @@
 </head>
 <body>
 
-<input type = "checkbox" class = "checkbox" onclick="Buttontoggle();" id = "checkbox">
-<label for="checkbox" class = "label">
-<div class = "ball"></div>
-</label>
 
   <div class="navbar">
     <b><big>
@@ -27,6 +23,10 @@
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </b></big>
+    <input type = "checkbox" class = "checkbox" onclick="Buttontoggle();" id = "checkbox">
+    <label for="checkbox" class = "label">
+    <div class = "ball"></div>
+    </label>
   </div>
 
 <a id = "home">
@@ -49,7 +49,7 @@
     <br>
     <br>
 
-    I received a B.S. in Mathematics from Georgia State University along with a M.S. in Computational Science and Engineering from Georgia Tech. I currently work at Demand Driven Technologies as a business data analyst, assisting in the creation of an AI/machine learning model to help our customers' supply chain by minimizing inventory while maximizing their on time delivery.
+    I received a B.S. in Mathematics from Georgia State University along with an M.S. in Computational Science and Engineering from Georgia Tech. I currently work at Demand Driven Technologies as a business data analyst, assisting in the creation of an AI/machine learning model to help our customers' supply chain by minimizing inventory while maximizing their on time delivery.
 
     <br>
     <br>
@@ -90,7 +90,17 @@
   <h2> (Contact) </h2>
 </div>
 
+<a href="mailto:ircnang@gmail.com">
+<div class = 'buttoncontainer'>
+  <button class='contactbutton'>Send me a message</button></a>
+</div>
 
+
+
+
+<div class = 'bottomtext'>
+  <p> Made from scratch with ♡ by me! </p>
+</div>
 
 <script src="main.js"></script>
 </body>
