--- a/home.html
+++ b/home.html
@@ -40,6 +40,7 @@
   <h1> 바이오 </h1>
   <h2> (About) </h2>
 </div>
+</a>
 
 <div class = 'aboutsection'>
   <p>
@@ -59,11 +60,12 @@
     <br>
     <br>
 
-    <!---
     In October 2021, I was diagnosed with a rare bone cancer called <a href="https://my.clevelandclinic.org/health/diseases/15041-osteosarcoma">osteosarcoma</a>.
+
     <br>
-    After 5 surgeries and 30 weeks of chemotherapy over the course of a year, I was declared NED (No Evidence of Disease) and have been since September 2022. I hope to one day use my data analysis skills to help predict recurrence in other osteosarcoma patients.
-    --->
+    <br>
+
+    After 5 surgeries and 30 weeks of chemotherapy over the course of a year, I was declared NED (No Evidence of Disease) and have been since October 2022. I hope to one day use my data analysis skills to help predict recurrence in other osteosarcoma patients.
 
   </p>
 
@@ -80,8 +82,22 @@
 <div class = 'projectsection'>
   <p>
     <big><strong>For all project code, please refer to my <a href="http://www.github.com/inang1">github</a>.</big></strong>
+    <br>
+    Or click on the title of the project to go to the corresponding repository.
   </p>
 </div>
+
+<div class = 'projects'>
+  <a href="https://github.com/inang1/Twitch-Tracker-Scraper"><h2> Twitch Tracker Scraper </h2></a>
+  <p>
+    A webscraper built in Python using Selenium to crawl a particular streamer's Twitch Tracker page and export their stream data. The only inputs needed are the Twitch ID of the streamer along with the export path for the csv.
+    <br>
+    <br>
+    The data export contains the following columns: Date of Stream, Time of Stream, Duration, Average Concurrent Viewers, Max Concurrent Viewers, Followers, Views, and Title.
+  </p>
+
+</div>
+
 
 
 <a id = "contact">
