Updated info on projects and added links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div class = 'aboutsection'>
   <p>
-    <img src="resources\Untitled-2.png" id='bioimg'>
+    <img src="Untitled-2.png" id='bioimg'>
     <big><strong>Hello!! My name is Isabella Nang, and it's nice to meet you!</big></strong>
 
     <br>
@@ -96,23 +96,37 @@
     The csv data export contains the following columns: Date of Stream, Time of Stream, Duration, Average Concurrent Viewers, Max Concurrent Viewers, Followers, Views, and Title.
   </p>
 
-  <h2> Twitch Tracker Visualizations (WIP) </h2>
+  <a href="https://github.com/inang1/Twitch-Tracker-Viz"><h2> Twitch Tracker Visualizations (WIP)</h2></a>
   <p>
-    Included in this repo are recreations of the Statistics page on Twitch Tracker, all made using the csv export from my Twitch Tracker Scraper. Two versions of the visualizations are included: one made using matplotlib/seaborn with Python and a dashboard made with PowerBI.
+    Included in this repo are recreations of the Statistics page on Twitch Tracker, all made using the csv export from my Twitch Tracker Scraper. Two versions of the visualizations are included: one made using matplotlib/seaborn with Python and a visual made with PowerBI.
 
     <br>
     <br>
 
     The visualizations include the following:
+    <br>
+    <br>
+    1. Day of the Week Analysis: Number of Active Days, Number of Active Days by Year, Hours Streamed on Average, Average Number of Viewers, Average number of Followers
+    <br>
+    <br>
+    2. Statistics by Month: Hours Streamed, Concurrent Viewers, Followers Gained
+    <br>
+    <br>
+    3. A visualization combining total followers, total views, hours streamed, hours watched, average viewers, and active days.
 
-  <h2> DDMRP Simulator (WIP)</h2>
+    <br>
+    <br>
+
+    The Python version also includes functions to pull the following statistics and display them as a table: followers to date, views to date, average stream time, total hours streamed, active days per week, followers per stream, views per stream, average followers gained per hour streamed, and average views per hour streamed. It also can generate a wordcloud of the most common words used in the stream titles.
+
+  <a href="https://github.com/inang1/DDMRP-Simulator"><h2> DDMRP Simulator (WIP)</h2></a>
   <p>
-    A DDMRP simulation tool that takes in a Parts file and Demand History file, combines them, then simulates the demand history and outputs a results file along with visualizations of the Green/Yellow/Red zones for each part is included with each image having the name of the corresponding part.
+    A DDMRP simulation tool built in Python that takes in a Parts file and Demand History file, cleans and combines them, then simulates the demand history and outputs a results file. Visualizations of the Green/Yellow/Red zones for each part is included with each image having the name of the corresponding part.
 
     <br>
     <br>
 
-    When I first started working for Demand Driven Technologies, I would format the data in Excel to match the AI/ML format, run it through the AI/ML software multiple times using different settings, format the data to match a different DDMRP simulation tool within Excel, then combine the different outputs of the software and Excel simulation into a results file. All of this was done manually and was very time consuming.
+    When I first started working for Demand Driven Technologies, I would format the data in Excel to match the AI/ML tool format, run it through the AI/ML software multiple times using different settings, format the original data to match a different DDMRP simulation tool within Excel, then combine the different outputs of the AI/ML software and Excel simulation into a results file. All of this was done manually and was very time consuming.
 
     <br>
     <br>
